fix: fix z-index

--- a/src/css/modules/_modal.scss
+++ b/src/css/modules/_modal.scss
@@ -51,6 +51,8 @@
 }
 
 .c-modal__map {
+  position: relative;
+  z-index: 0;
   background-color: #eee;
   height: 100%;
   width: 100%;
